--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-rocket = { version = "0.5.0-rc.2", features = ["json"] }
+rocket = { version = "0.5.0-rc.2", features = ["json", "secrets"] }
 sea-orm = { version = "0.10.7", features = ["sqlx-sqlite", "runtime-tokio-native-tls"] }
 sea-orm-rocket = "0.5.2"
 rand = "0.8.5"
