Added dark and light theme

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -17,6 +17,7 @@
             "runtimeExecutable": "npm",
             "args": ["run", "dev"],
             "cwd": "${workspaceFolder}/client",
+            "console": "integratedTerminal"
         },
     ],
 }
