--- a/client/package.json
+++ b/client/package.json
@@ -15,9 +15,12 @@
 		"@fontsource/fira-mono": "^4.5.10",
 		"@neoconfetti/svelte": "^1.0.0",
 		"@smui/button": "^7.0.0-beta.0",
+		"@smui/card": "^7.0.0-beta.0",
+		"@smui/common": "^7.0.0-beta.0",
 		"@smui/data-table": "^7.0.0-beta.0",
 		"@smui/dialog": "^7.0.0-beta.0",
 		"@smui/form-field": "^7.0.0-beta.0",
+		"@smui/select": "^7.0.0-beta.0",
 		"@smui/switch": "^7.0.0-beta.0",
 		"@smui/textfield": "^7.0.0-beta.0",
 		"@sveltejs/adapter-auto": "^2.0.0",
