--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -3,6 +3,9 @@ name = "server"
 version = "0.1.0"
 edition = "2021"
 
+[workspace]
+members = [".", "background_generator"]
+
 [dependencies]
 rocket = { version = "0.5.0-rc.2", features = ["json", "secrets"] }
 sea-orm = { version = "0.10.7", features = ["sqlx-sqlite", "runtime-tokio-native-tls"] }
@@ -11,3 +14,6 @@ rand = "0.8.5"
 background_generator = { path = "background_generator" }
 image = "0.24.5"
 regex = "1"
+
+[profile.dev.package."*"]
+opt-level = 2
