Added chains generator and generator saving

--- a/server/background_generator/Cargo.toml
+++ b/server/background_generator/Cargo.toml
@@ -10,5 +10,5 @@ image = "0.24.5"
 imageproc = "0.23.0"
 rand = "0.8.5"
 itertools = "0.10.5"
-bracket-color = "0.8.7"
 rand_chacha = "0.3.1"
+noise = "*"
