--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -14,6 +14,9 @@ rand = "0.8.5"
 background_generator = { path = "background_generator" }
 image = "0.24.5"
 regex = "1"
+chrono = "*"
+uuid = { version = "*", features = ["v7", "std"] }
 
 [profile.dev.package."*"]
 opt-level = 2
+
