--- a/client/package.json
+++ b/client/package.json
@@ -20,9 +20,11 @@
 		"@smui/data-table": "^7.0.0-beta.0",
 		"@smui/dialog": "^7.0.0-beta.0",
 		"@smui/form-field": "^7.0.0-beta.0",
+		"@smui/icon-button": "^7.0.0-beta.0",
 		"@smui/select": "^7.0.0-beta.0",
 		"@smui/switch": "^7.0.0-beta.0",
 		"@smui/textfield": "^7.0.0-beta.0",
+		"@smui/top-app-bar": "^7.0.0-beta.0",
 		"@sveltejs/adapter-auto": "^2.0.0",
 		"@sveltejs/adapter-static": "^2.0.0",
 		"@sveltejs/kit": "^1.5.0",
